# albert-plugin-bluetooth

./: CMakeLists.txt  README.md  bluetooth.qrc  metadata.json
i18n/: bluetooth_de.ts  bluetooth_en.ts
src/: bluetoothcontroller.cpp  bluetoothcontroller.cpp.autosave  bluetoothcontroller.h  bluetoothcontroller_p.h  bluetoothcontrolleritem.cpp  bluetoothcontrolleritem.h  bluetoothcontrollerprivatebase.h  bluetoothcontrollerprivatebase.h.autosave  bluetoothdevice.cpp  bluetoothdevice.h  bluetoothdeviceitem.cpp  bluetoothdeviceitem.h  bluetoothdeviceprivatebase.h  bluetoothmanager.cpp  bluetoothmanager.h  items.cpp  items.h  plugin.cpp  plugin.cpp.autosave  plugin.h  plugin.mm  pluginprivatebase.h
src/bluez/: bluetoothcontroller.cpp  bluetoothcontrollerprivate.cpp  bluetoothcontrollerprivate.h  bluetoothdevice.cpp  bluetoothdevice_p.h  bluetoothdeviceprivate.cpp  bluetoothdeviceprivate.h  bluetoothmanagerprivate.cpp  bluetoothmanagerprivate.h  bluez.xml  custom_types.h  plugin.cpp
src/iobluetooth/: bluetoothcontroller.mm  bluetoothcontrollerprivate.h  bluetoothcontrollerprivate.mm  bluetoothdevice.mm  bluetoothdevice_p.h  bluetoothdeviceprivate.h  bluetoothdeviceprivate.mm  bluetoothmanagerprivate.h  bluetoothmanagerprivate.mm  plugin.mm
